# ballsdex-aichat

./: .gitignore  LICENSE  README.md  pyproject.toml
aichat/: admin.py  apps.py  models.py
aichat/ext/: __init__.py  client.py  cog.py  gemini_queue.py  quota.py  tools.py
aichat/migrations/: 0001_initial.py  0002_aichatsettings_requests_per_minute.py  0003_alter_aichatsettings_personality.py  0004_remove_aichatsettings_music_api_key_and_more.py  0005_alter_aichatsettings_allow_web_search_and_more.py  0006_alter_aichatsettings_fallback_models_and_more.py  0007_alter_aichatsettings_allowed_channel_ids_and_more.py  0008_alter_aichatsettings_fallback_models.py  0009_alter_aichatsettings_fallback_models_and_more.py  0010_aichatsettings_allow_special_events.py  0011_alter_aichatsettings_requests_per_minute.py  0012_quota_protection.py
